# DG-MCP

./: .gitignore  CLAUDE.md  README.en.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml  release-guard.yml
dg_mcp/: device.py  protocol.py  server.py
src/: cli.ts  coyote-device.ts  noble-shim.ts  server.ts  waveform-library.test.ts  waveform-library.ts
